[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "leptos-fullstack"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
uuid = { version = "1.3.0", features = ["serde", "v4", "js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
leptos = { version = "0.4", features = ["serde"] }
leptos_meta = { version = "0.4" }
leptos_router = { version = "0.4" }
leptos_axum = { version = "0.4", optional = true }
console_log = { version = "1" }
log = "0.4"
wasm-bindgen = "=0.2.84"                                       # The version here must match the pinned stuff in Nix flakes.
console_error_panic_hook = "0.1"
# Backend deps
axum = { version = "0.6", features = ["json", "tokio"], optional = true }
axum-macros = { version = "0.3", optional = true }
tokio = { version = "1.29", features = ["full"], optional = true }
tower-http = { version = "0.4", features = ["full"], optional = true }

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:axum-macros",
]
