[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "leptos-fullstack"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["json", "tokio"] }
leptos_axum = "0.4"
leptos = { version = "0.4", features = ["serde", "ssr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
leptos-fullstack-common = { version = "0.1.0", path = "../common", features = [
    "ssr",
] }
axum-macros = "0.3.8"
