[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2021"
name = "leptos-fullstack-common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3.0", features = ["serde", "v4", "js"] }
leptos = { version = "0.4", features = ["serde"] }

[features]
ssr = ["leptos/ssr"]
csr = ["leptos/csr"]
