[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "leptos-fullstack-frontend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
leptos = { version = "0.4", features = ["serde", "csr"] }
leptos_meta = { version = "0.4", features = ["csr"] }
leptos_router = { version = "0.4", features = ["csr"] }
console_log = { version = "1" }
log = "0.4"
# The version here must match the pinned stuff in Nix flakes.
wasm-bindgen = "=0.2.84"
console_error_panic_hook = "0.1"
leptos-fullstack-common = { version = "0.1.0", path = "../common", features = [
    "csr",
] }
